# crypto-portfolio-management

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  app.py  pyproject.toml  railway.toml  requirements.txt  spec_roadmap.md
.claude/: settings.json
.claude/rules/: critical-warnings.md  data-layer.md  monetary-values.md
core/: config.py  logger.py
core/analytics/: tearsheet.py
core/data/: cache.py  fetcher.py  onchain.py  price_feed.py  symbol_map.py  universe.py
core/models/: covariance.py  garch.py  regime.py  returns.py
core/optimization/: _base.py  black_litterman.py  cvar.py  equal_weight.py  hrp.py  markowitz.py  regime_alloc.py  risk_parity.py
core/risk/: backtest.py  metrics.py
dashboard/: layout.py  theme.py
dashboard/callbacks/: __init__.py  backtest_cb.py  data_cb.py  garch_cb.py  live_cb.py  onchain_cb.py  optimization_cb.py  regime_cb.py  report_cb.py
dashboard/components/: comparison_table.py  correlation_heatmap.py  dendrogram.py  drawdown_chart.py  efficient_frontier.py  equity_chart.py  garch_chart.py  metric_card.py  onchain_charts.py  regime_chart.py  weights_chart.py
docs/: paper.tex
tests/: conftest.py  test_backtest.py  test_cache.py  test_covariance.py  test_fetcher.py  test_garch.py  test_onchain.py  test_optimization.py  test_price_feed.py  test_regime.py  test_returns.py  test_risk_metrics.py  test_universe.py
